--- a/public/turbinesDeployed.html
+++ b/public/turbinesDeployed.html
@@ -61,7 +61,7 @@
           </thead>
 
           </tr>
-          <tbody id="notesTableBody2" v-for="c in turbines"
+          <tbody id="notesTableBody2" v-for="c in turbineDeployed"
           :id="c.turbineDeployedId"
           :key="c.turbineDeployedId">
           <tr>
