--- a/public/turbinesDeployed.html
+++ b/public/turbinesDeployed.html
@@ -61,9 +61,7 @@
           </thead>
 
           </tr>
-          <tbody id="notesTableBody2" v-for="c in turbineDeployed"
-          :id="c.turbineDeployedId"
-          :key="c.turbineDeployedId">
+          <tbody id="notesTableBody2" v-for="c in turbines">
           <tr>
             <td>{{c.turbineDeployedId}}</td>
             <td>{{c.turbineId}}</td>
