--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
                     </thead>
 
                   </tr>
-                  <tbody id="notesTableBody2" v-for="c in client"
+                  <tbody id="notesTableBody2" v-for="c in clientTest"
                   :key="c.clientId"
                   :id="c.clientId">
                   <tr>
