--- a/public/index.html
+++ b/public/index.html
@@ -71,8 +71,10 @@
                 </table>
               </div>
 
+            </main>
 
 
+<main id="clientServiceVue">
         <table id="notesTable" class="table table-striped table-sm">
           <tr>
             <thead>
