--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="#"></a></li>
             <li class="nav-item"><a href="index.html"> Main Page </a></li>
+            <li class="nav-item"><a href="clientNotes.html"> Client Notes </a></li>
             <li class="nav-item"><a href="aboutUs.html"> About Us </a></li>
             <li class="nav-item"><a href="turbinesDeployed.html"> Turbine Information </a></li>
             <li class="dropdown nav-item">
