--- a/public/sites.html
+++ b/public/sites.html
@@ -27,7 +27,9 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="#"></a></li>
             <li class="nav-item"><a href="index.html"> Main Page </a></li>
+            <li class="nav-item"><a href="clientNotes.html"> Client Notes </a></li>
             <li class="nav-item"><a href="aboutUs.html"> About Us </a></li>
+            <li class="nav-item"><a href="turbinesDeployed.html"> Turbine Information </a></li>
             <li class="dropdown nav-item">
                     <a class="dropdown-toggle" href="" data-toggle="dropdown">Contact       <span class="caret">         </span>
                     </a>
