--- a/public/metrics.html
+++ b/public/metrics.html
@@ -100,7 +100,7 @@
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <!-- Optional JavaScript -->
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    <script src="js/turbines.app.js"></script>
+    <script src="js/metrics.app.js"></script>
 			<footer>
       Kelley School of Business - MSIS Program, 2018
     </footer>
