--- a/public/graph.html
+++ b/public/graph.html
@@ -5,24 +5,38 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<!--bootstrap CSS -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" />
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/chart.css">
 		<title> KPI </title>
 	</head>
 	<body class="first">
-		<header>
-			<nav class="navbar navbar-expand-lg navbar-light bg-light">
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-					<div class="navbar-nav">
-						<a class="nav-item nav-link" href="client.html">Clients</a>
-						<a class="nav-item nav-link" href="turbines.html">Turbines</a>
-						<a class="nav-item nav-link" href="site.html">Sites</a>
-					</div>
-				</div>
-			</nav>
-		</header>
+    <header class="row">
+          <div class="col-xs-10">
+        <img src="https://www.ags.org.uk/content/uploads/2018/01/AGS_logo_short.png" alt="Myself" height = "90">
+      </div>
+      </header>
+    <nav class="navbar navbar-custom navbar-expand-md">
+      <div class="container-fluid test">
+        <div class="navbar-header">
+          <a class="navbar-brand">Navigation Bar</a>
+        </div>
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="#"></a></li>
+          <li class="nav-item"><a href="index.html"> Main Page </a></li>
+          <li class="nav-item"><a href="clientNotes.html"> Client Notes </a></li>
+          <li class="nav-item"><a href="aboutUs.html"> About Us </a></li>
+          <li class="dropdown nav-item">
+                  <a class="dropdown-toggle" href="" data-toggle="dropdown">Contact       <span class="caret">         </span>
+                  </a>
+                  <ul class="dropdown-menu">
+                      <li><a href="">Email</a></li>
+                      <li><a href="">Phone List</a></li>
+                      <li><a href="">Live Chat</a></li>
+                  </ul>
+              </li>
+          <li class="nav-item"><a href="sites.html"> Sites </a></li>
+        </ul>
+      </div>
+    </nav>
 		<div class="container">
 
 			<main>
