--- a/public/graph.html
+++ b/public/graph.html
@@ -96,41 +96,6 @@
 						</div>
 					</div>
 
-					<!-- </div> -->
-					<!-- <div class="row place">
-					<section class="col place">
-						<div class="row">
-							<div class="col placeholder">
-								<h4>Heart Rate</h4>
-							</div>
-						</div>
-					</section>
-					<div class="col placeholder">
-						<h4>Compressor Efficiency</h4>
-						<div>Data</div>
-					</div>
-				</div> -->
-
-		<!--end row 1, high-level summary information-->
-			<!-- <div class="row">
-				<section class="col placeholder">
-					<h4>Availability</h4>
-					<div>Data</div>
-				</section>
-				<div class="col placeholder" >
-					<h4>Fired Hours</h4>
-					<div>Data</div>
-				</div>
-				<div class="col placeholder">
-					<h4>Trips</h4>
-					<div>Data</div>
-				</div>
-			</div>
-			<div class="col placeholder">
-				<h4>Starts</h4>
-				<div>Data</div>
-			</div> -->
-
 		</main>
 	</div>
 
@@ -153,5 +118,8 @@
 	<script src="js/kpiHours.app.js"></script>
 	<script src="js/kpiTrips.app.js"></script>
 	<script src="js/kpiStarts.app.js"></script>
+  <footer>
+  Kelley School of Business - MSIS Program, 2018
+</footer>
 </body>
 </html>
