--- a/public/contact.html
+++ b/public/contact.html
@@ -28,17 +28,9 @@
             <li class="active"><a href="#"></a></li>
             <li class="nav-item"><a href="index.html"> Main Page </a></li>
             <li class="nav-item"><a href="clientNotes.html"> Client Notes </a></li>
-            <li class="nav-item"><a href="aboutUs.html"> About Us </a></li>
-            <li class="dropdown nav-item">
-                    <a class="dropdown-toggle" href="contact.html" data-toggle="dropdown">Contact       <span class="caret">         </span>
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a href="">Email</a></li>
-                        <li><a href="">Phone List</a></li>
-                        <li><a href="">Live Chat</a></li>
-                    </ul>
-                </li>
             <li class="nav-item"><a href="sites.html"> Sites </a></li>
+            <li class="nav-item"><a href="aboutUs.html"> About Us </a></li>
+            <li class="nav-item"><a href="contact.html">Contact</a></li>
           </ul>
         </div>
       </nav>
