--- a/public/graph.html
+++ b/public/graph.html
@@ -19,22 +19,14 @@
         <div class="navbar-header">
           <a class="navbar-brand">Navigation Bar</a>
         </div>
-        <ul class="nav navbar-nav">
-          <li class="active"><a href="#"></a></li>
-          <li class="nav-item"><a href="index.html"> Main Page </a></li>
-          <li class="nav-item"><a href="clientNotes.html"> Client Notes </a></li>
-          <li class="nav-item"><a href="aboutUs.html"> About Us </a></li>
-          <li class="dropdown nav-item">
-                  <a class="dropdown-toggle" href="" data-toggle="dropdown">Contact       <span class="caret">         </span>
-                  </a>
-                  <ul class="dropdown-menu">
-                      <li><a href="">Email</a></li>
-                      <li><a href="">Phone List</a></li>
-                      <li><a href="">Live Chat</a></li>
-                  </ul>
-              </li>
-          <li class="nav-item"><a href="sites.html"> Sites </a></li>
-        </ul>
+				<ul class="nav navbar-nav">
+					<li class="active"><a href="#"></a></li>
+					<li class="nav-item"><a href="index.html"> Main Page </a></li>
+					<li class="nav-item"><a href="clientNotes.html"> Client Notes </a></li>
+					<li class="nav-item"><a href="sites.html"> Sites </a></li>
+					<li class="nav-item"><a href="aboutUs.html"> About Us </a></li>
+					<li class="nav-item"><a href="contact.html">Contact</a></li>
+				</ul>
       </div>
     </nav>
 		<div class="container">
