--- a/public/index.html
+++ b/public/index.html
@@ -62,10 +62,14 @@
                   </tbody>
                 </table>
               </div>
-            <div id="Buttons">
-              <form action="http://google.com">
-    <input type="submit" value="Go to Google" />
-</form>
+
+            <div id="buttons">
+              <form action="graph.html?turbineDeployedId=1">
+                <input type="submit" value="Turbine 1 KPIs" />
+              </form>
+              <form action="graph.html?turbineDeployedId=2">
+                <input type="submit" value="Turbine 2 KPIs" />
+              </form>
             </div>
 
 
