--- a/public/graph.html
+++ b/public/graph.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<!--bootstrap CSS -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" />
-		<link rel="stylesheet" href="css/chart.css">
+		<link rel="stylesheet" href="CSS/chart.css">
 		<title> KPI </title>
 	</head>
 	<body class="first">
