--- a/public/graph.html
+++ b/public/graph.html
@@ -6,7 +6,7 @@
 		<!--bootstrap CSS -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" />
 		<link rel="stylesheet" href="CSS/chart.css">
-		<title> KPI </title>
+		<title> KPI Information </title>
 	</head>
 	<body class="first">
     <header class="row">
