--- a/public/graph.html
+++ b/public/graph.html
@@ -35,7 +35,7 @@
 				<br />
 
 					<!-- <div class="col placeholder"> -->
-					<div style="float: left" id="kpiMain">
+					<div id="kpiMain">
 						<h4>Output</h4>
 						<div id="outputChart" class="col">
 						</div>
@@ -47,7 +47,7 @@
 						</div>
 					</div>
 
-					<div style="float: left" id="kpiCompressor">
+					<div id="kpiCompressor">
 						<h4>Compressor Efficiency</h4>
 						<div id="compressorChart" class="col">
 						</div>
