--- a/public/aboutUs.html
+++ b/public/aboutUs.html
@@ -60,4 +60,5 @@ With these words he sat down, and Calchas son of Thestor, wisest of augurs, who 
       </p>
       </main>
       </body>
+      <footer>Kelley School of Business - MSIS Program, 2018</footer>
       </html>
