--- a/public/contact.html
+++ b/public/contact.html
@@ -36,10 +36,17 @@
       </nav>
       <main  class="container-fluid">
         <div class="container-fluid">
-          <div class="row">
+        <br />
+          <div style="padding-bottom: 5px" class="row" id="contactPoints">
                     <div class="col">Contact Service Tech</div>
                     <div class="col">Email Us</div>
                     <div class="col">Report Turbine Outage</div>
+          </div>
+
+          <div class="row" id="contactInfo">
+                    <div class="col">123-456-7891</div>
+                    <div class="col">example@example.com</div>
+                    <div class="col">Turbine Down Site</div>
           </div>
         </div>
       </main>
