--- a/public/sites.html
+++ b/public/sites.html
@@ -89,6 +89,7 @@
     <!-- Optional JavaScript -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src="js/sites.app.js"></script>
+    <script src="js/turbines.app.js"></script>
 			<footer>
       Kelley School of Business - MSIS Program, 2018
     </footer>
