--- a/public/graph.html
+++ b/public/graph.html
@@ -95,7 +95,7 @@
 	<!-- development version, includes helpful console warnings -->
 	<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
-	<script src="js/kpi.apps.js"></script>
+	<script src="js/kpi.app.js"></script>
 	<script src="js/kpiHeat.app.js"></script>
 	<script src="js/kpiCompressor.app.js"></script>
 	<script src="js/kpiAvailability.app.js"></script>
