--- a/public/graph.html
+++ b/public/graph.html
@@ -37,49 +37,50 @@
 					<!-- <div class="col placeholder"> -->
 					<div id="kpiMain" class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
 						<h4>Output</h4>
-						<div id="outputChart" class="col">
+						<div id="outputChart">
 						</div>
 					</div>
 
 					<div  id="kpiHeat" class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
 						<h4>Heat Rate</h4>
-						<div id="heatChart" class="col">
+						<div id="heatChart">
 						</div>
 					</div>
 
 					<div id="kpiCompressor" class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
 						<h4>Compressor Efficiency</h4>
-						<div id="compressorChart" class="col">
+						<div id="compressorChart">
 						</div>
 					</div>
 
 					<div  id="kpiAvailability" class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
 						<h4>Availability</h4>
-						<div id="availabilityChart" class="col">
+						<div id="availabilityChart">
+						</div>
 						</div>
 					</div>
 
 					<div  id="kpiReliability" class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
 						<h4>Reliability</h4>
-						<div id="reliabilityChart" class="col">
+						<div id="reliabilityChart">
 						</div>
 					</div>
 
 					<div  id="kpiHours" class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
 						<h4>Fired Hours</h4>
-						<div id="hoursChart" class="col">
+						<div id="hoursChart">
 						</div>
 					</div>
 
 					<div  id="kpiTrips" class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
 						<h4>Trips</h4>
-						<div id="tripsChart" class="col">
+						<div id="tripsChart">
 						</div>
 					</div>
 
 					<div  id="kpiStarts" class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
 						<h4>Starts</h4>
-						<div id="startsChart" class="col">
+						<div id="startsChart">
 						</div>
 					</div>
 	</div>
