--- a/public/index.html
+++ b/public/index.html
@@ -14,13 +14,13 @@
     <title>Project Dashboard</title>
   </head>
     <body>
-			<header class="container-fluid row">
-            <div class="col-xs-10">
+			<header class="col">
+            <div class="col-xs-12">
           <img src="https://www.ags.org.uk/content/uploads/2018/01/AGS_logo_short.png" alt="Myself" height = "90">
         </div>
         </header>
       <nav class="navbar navbar-custom navbar-expand-md">
-        <div class="container-fluid test">
+        <div class="container-fluid">
           <div class="navbar-header">
             <a class="navbar-brand">Navigation Bar</a>
           </div>
