--- a/public/metrics.html
+++ b/public/metrics.html
@@ -28,6 +28,7 @@
             <li class="nav-item"><a href="index.html"> Main Page </a></li>
             <li class="nav-item"><a href="clientNotes.html"> Client Notes </a></li>
             <li class="nav-item"><a href="sites.html"> Sites </a></li>
+            <li class="nav-item"><a href="sensorTimeSeries.html"> All Sensor Data </a></li>
             <li class="nav-item"><a href="aboutUs.html"> About Us </a></li>
             <li class="nav-item"><a href="contact.html">Contact</a></li>
           </ul>
