--- a/public/aboutUs.html
+++ b/public/aboutUs.html
@@ -15,11 +15,11 @@
   </head>
     <body>
 			<header class="col">
-            <div class="col-xs-10">
+            <div class="col-xs-12">
           <img src="https://www.ags.org.uk/content/uploads/2018/01/AGS_logo_short.png" alt="Myself" height = "90">
         </div>
         </header>
-      <nav class="navbar navbar-custom navbar-expand-m">
+      <nav class="navbar navbar-custom navbar-expand-md">
         <div class="container-fluid test">
           <div class="navbar-header">
             <a class="navbar-brand">Navigation Bar</a>
