--- a/public/metrics.html
+++ b/public/metrics.html
@@ -21,7 +21,7 @@
       <nav class="navbar navbar-custom navbar-expand-md">
         <div class="container-fluid test">
           <div class="navbar-header">
-            <a class="navbar-brand">Navigation Bar</a>
+            <a class="navbar-brand"></a>
           </div>
           <ul class="nav navbar-nav">
             <li class="active"><a href="#"></a></li>
