--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
       <script src="js/tablesort.min.js"></script>
       <script> new Tablesort(document.getElementById('notesTable'));</script>
 			<footer>
-      Kelley School of Business - MSIS Program, 2018
+      The Kelley School of Business - MSIS Program, 2018
     </footer>
     </body>
 </html>
