--- a/public/TurbineDetail.html
+++ b/public/TurbineDetail.html
@@ -44,7 +44,7 @@
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
 			<footer>
-      Kelley School of Business - MSIS Program, 2018
+      The Kelley School of Business - MSIS Program, 2018
     </footer>
     </body>
 </html>
